feat: Add reusable workflows for release management and CI/CD
- Implemented reusable release workflows in `.github/workflows/.backup/` for semantic versioning and changelog generation.
- Created a modular CI workflow in `.github/workflows/ci.yml` to streamline testing and building processes.
- Developed a publish workflow in `.github/workflows/publish.yml` for NPM and GitHub Packages publishing.
- Introduced a release workflow in `.github/workflows/release.yml` to automate release PR creation and version bumping.
- Added a workflow for updating major version tags in `.github/workflows/update-major-version-tags.yml`.
- Enhanced existing workflows with improved documentation and structured outputs for better integration and usability.

feat: Add org-level publish workflow for NPM and GitHub Packages

- Introduced a new GitHub Actions workflow for publishing packages, allowing for customizable commands for testing, building, and publishing to both NPM and GitHub Packages.
- Implemented detection of release conditions based on PR title and labels.
- Added steps for generating release notes, creating GitHub releases, and publishing to registries.
- Included logic for handling private and public repository configurations.

feat: Create org-level release workflow for managing version bumps

- Added a new GitHub Actions workflow to automate the creation of release pull requests based on commit messages.
- Implemented version bump detection (major, minor, patch) based on commit history and breaking changes.
- Included steps for running tests, generating changelogs, and creating pull requests with version updates.
- Enhanced contributor detection using GitHub API for accurate changelog generation.

feat(gitignore)!: expand ignored files for AI agent configurations

feat: Add org-level CI and release workflows with example configurations

- Implemented org-level CI workflow in `.github/workflows/ci.yml` for testing and building packages.
- Created org-level release workflow in

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
 # VS Code settings
 .vscode/
+
+# AI Agent Files
+.cursorrules
+.windsurfrules
+.clinerules
+.cursor/
+.windsurf/
+.cline/
+.aider*
+.aide*
+.claude*
+.copilot*
+.github-copilot*
+ai-instructions.*
+AGENT.md
+AGENTS.md
+CLAUDE.md
+AI.md
+*.ai.md
+*-agent.*
+agent-*
+.ai/
+ai/
+agents/
+.github/copilot-instructions.md
