--- a/.github/actions/github/api/releases/action.yml
+++ b/.github/actions/github/api/releases/action.yml
@@ -30,59 +30,33 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Create signed tag and GitHub Release via API
+    - name: Get current commit SHA
+      id: get-sha
+      shell: bash
+      run: |
+        echo "commit-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+
+    - name: Create tag if needed
+      id: create-tag
+      uses: CLDMV/.github/.github/actions/github/api/tags/create@v1
+      with:
+        tag: v${{ inputs.version }}
+        message: Release v${{ inputs.version }}
+        commit-sha: ${{ steps.get-sha.outputs.commit-sha }}
+        github-token: ${{ inputs.github-token }}
+        force: false
+
+    - name: Create GitHub Release
       id: create-release
       shell: bash
-      env:
-        GITHUB_TOKEN: ${{ inputs.github-token }}
       run: |
         VERSION="${{ inputs.version }}"
         TAG_NAME="v$VERSION"
         RELEASE_NAME="${{ inputs.package-name }} v$VERSION"
-
-        # Get current commit SHA
-        COMMIT_SHA=$(git rev-parse HEAD)
-        echo "Creating signed tag for commit: $COMMIT_SHA"
-
-        # Create signed annotated tag via GitHub API
-        echo "🏷️ Creating signed annotated tag via GitHub API..."
-        TAG_RESPONSE=$(curl -s -X POST \
-          -H "Authorization: token ${{ inputs.github-token }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/${{ github.repository }}/git/tags" \
-          -d "{
-            \"tag\": \"$TAG_NAME\",
-            \"message\": \"Release $TAG_NAME\",
-            \"object\": \"$COMMIT_SHA\",
-            \"type\": \"commit\"
-          }")
-
-        TAG_SHA=$(echo "$TAG_RESPONSE" | jq -r '.sha')
-
-        if [ "$TAG_SHA" = "null" ] || [ -z "$TAG_SHA" ]; then
-          echo "❌ Failed to create tag via API"
-          echo "Response: $TAG_RESPONSE"
-          exit 1
-        fi
-
-        echo "✅ Created signed tag: $TAG_SHA"
-
-        # Create tag reference
-        echo "📌 Creating tag reference..."
-        REF_RESPONSE=$(curl -s -X POST \
-          -H "Authorization: token ${{ inputs.github-token }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/${{ github.repository }}/git/refs" \
-          -d "{
-            \"ref\": \"refs/tags/$TAG_NAME\",
-            \"sha\": \"$TAG_SHA\"
-          }")
-
-        echo "✅ Created tag reference"
-
-        # Create GitHub Release
-        echo "🚀 Creating GitHub Release..."
         RELEASE_BODY="${{ inputs.release-notes }}"
+        TAG_SHA="${{ steps.create-tag.outputs.tag-sha }}"
+
+        echo "🚀 Creating GitHub Release..."
         RELEASE_RESPONSE=$(curl -s -X POST \
           -H "Authorization: token ${{ inputs.github-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
@@ -90,7 +64,7 @@ runs:
           -d "{
             \"tag_name\": \"$TAG_NAME\",
             \"name\": \"$RELEASE_NAME\",
-            \"body\": $(echo "$RELEASE_BODY" | jq -Rs .),
+            \"body\": $(echo \"$RELEASE_BODY\" | jq -Rs .),
             \"draft\": false,
             \"prerelease\": ${{ inputs.is-prerelease }}
           }")
@@ -113,10 +87,6 @@ runs:
           "https://api.github.com/repos/${{ github.repository }}/git/tags/$TAG_SHA")
 
         VERIFIED=$(echo "$TAG_VERIFY_RESPONSE" | jq -r '.verification.verified // false')
-        VERIFICATION_REASON=$(echo "$TAG_VERIFY_RESPONSE" | jq -r '.verification.reason // "unknown"')
+        VERIFICATION_REASON=$(echo "$TAG_VERIFY_RESPONSE" | jq -r '.verification.reason // \"unknown\"')
 
         echo "🔐 Tag verified: $VERIFIED (reason: $VERIFICATION_REASON)"
-
-
-
-
