--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -68,7 +68,7 @@ on:
 
       # Build and test parameters
       node_version:
-        description: "Node.js version to use (ignored if min_node_version is set)"
+        description: "Node.js version to use (default: lts/*)"
         required: false
         type: string
         default: "lts/*"
@@ -76,7 +76,7 @@ on:
         description: "Minimum Node.js version to test (e.g., 16.4)"
         required: false
         type: string
-        default: "16.4"
+        default: "20"
       max_node_major:
         description: "Override max Node.js major version (default: 22)"
         required: false
@@ -97,6 +97,17 @@ on:
         required: false
         type: string
         default: "npm run build:ci"
+      # Test control options
+      skip_performance_tests:
+        description: "Skip performance tests during CI"
+        required: false
+        type: boolean
+        default: false
+      skip_matrix_tests:
+        description: "Skip matrix testing (use single node version only)"
+        required: false
+        type: boolean
+        default: false
 
       # Release parameters
       version_bump:
@@ -111,6 +122,11 @@ on:
         default: ""
       is_prerelease:
         description: "Whether this is a prerelease"
+        required: false
+        type: boolean
+        default: false
+      release_source_only:
+        description: "Whether to create source-only release (no package assets)"
         required: false
         type: boolean
         default: false
@@ -149,6 +165,16 @@ jobs:
     steps:
       - id: set-matrix
         run: |
+          # Check if matrix testing is skipped
+          if [[ "${{ inputs.skip_matrix_tests }}" == "true" ]]; then
+            # Use single node version
+            SINGLE_VERSION="${{ inputs.node_version }}"
+            echo "📍 Matrix testing skipped, using single version: $SINGLE_VERSION"
+            echo "matrix=["$SINGLE_VERSION"]" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          # Build matrix from min to max versions
           MIN="${{ inputs.min_node_version }}"
           MAX_INPUT="${{ inputs.max_node_major }}"
           DEFAULT_MAX=22
@@ -170,7 +196,8 @@ jobs:
           done
           VERSIONS+=("lts/*")
           printf -v joined '%s","' "${VERSIONS[@]}"
-          joined="[\"${joined%","}\"]"
+          joined="["${joined%","}"]"
+          echo "📊 Matrix testing enabled with versions: $joined"
           echo "matrix=$joined" >> $GITHUB_OUTPUT
 
   build-and-test:
@@ -189,6 +216,7 @@ jobs:
           package-manager: ${{ inputs.package_manager }}
           test-command: ${{ inputs.test_command }}
           build-command: ${{ inputs.build_command }}
+          skip-performance-tests: ${{ inputs.skip_performance_tests }}
 
   detect-release:
     name: "🔍 Detect Release"
@@ -229,15 +257,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download build artifacts
-        uses: CLDMV/.github/.github/actions/common/steps/download-artifacts@v1
+        uses: actions/download-artifact@v4
         with:
-          artifact-name: ${{ inputs.download_artifact_name }}
+          name: ${{ inputs.download_artifact_name }}
           path: ${{ inputs.download_artifact_path }}
 
   create-release:
     name: "📋 Create GitHub Release"
     if: inputs.run_create_release == true
     runs-on: ubuntu-latest
+    needs: build-and-test
     outputs:
       release-id: ${{ steps.create.outputs.release-id }}
     steps:
@@ -249,6 +278,9 @@ jobs:
           package-name: ${{ inputs.package_name }}
           is-prerelease: ${{ inputs.is_prerelease }}
           package-manager: ${{ inputs.package_manager }}
+          release-source-only: ${{ inputs.release_source_only }}
+          node-version: ${{ inputs.node_version }}
+          build-command: ${{ inputs.build_command }}
           github-token: ${{ github.token }}
 
   detect-repo-config:
