--- a/examples/individual-repo-workflows/ci.yml
+++ b/examples/individual-repo-workflows/ci.yml
@@ -18,14 +18,23 @@ jobs:
     uses: CLDMV/.github/.github/workflows/ci.yml@v1
     with:
       package_name: "@cldmv/slothlet" # Required: Your NPM package name
-      # Optional parameters:
-      # node_version: "lts/*" # Use if you want a single version
-      min_node_version: "16.4" # Minimum Node.js version for matrix
-      # max_node_major: "22" # (Optional) Maximum Node.js major version
-      package_manager: "npm"
-      test_command: "npm test"
-      build_command: "npm run build:ci"
+
+      # Node.js Version Configuration (choose one approach)
+      # Option 1: Single Node.js version (simple)
+      # node_version: "lts/*" # Single Node.js version to test (default: lts/*)
+      # skip_matrix_tests: true # Use this with node_version (default: false)
+
+      # Option 2: Matrix testing (comprehensive) - DEFAULT BEHAVIOR
+      # min_node_version: "20" # Minimum Node.js version for matrix testing (default: 20)
+      # max_node_major: "22" # Maximum Node.js major version (default: 22)
+
+      # Package & Build Configuration
+      # package_manager: "npm" # Package manager - npm or yarn (default: npm)
+      # test_command: "npm test" # Command to run tests (default: npm test)
+      # build_command: "npm run build:ci" # Command to build package (default: npm run build:ci)
+
+      # Test Control Options
+      # skip_performance_tests: false # Skip performance tests during CI (default: false)
+      # skip_matrix_tests: false # Skip matrix testing, use single version (default: false)
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # skip_performance_tests: false
-      # skip_matrix_tests: false
