--- a/examples/individual-repo-workflows/publish.yml
+++ b/examples/individual-repo-workflows/publish.yml
@@ -4,14 +4,15 @@ name: 📦 Release and Publish
 on:
   pull_request:
     types: [closed]
-    branches: [master]
+    branches: [master, main]
 
 jobs:
   publish-package:
+    if: github.event.pull_request.merged == true
     uses: CLDMV/.github/.github/workflows/publish.yml@v1
     with:
       package_name: "@cldmv/slothlet" # Required: Your NPM package name
-      version: "1.0.0" # Required: Version to publish (usually from release PR)
+      # version: "1.0.0" # Version to publish - auto-detected from package.json if not provided (default: "")
 
       # Node.js Version Configuration
       # node_version: "lts/*" # Single Node.js version for build/test (default: lts/*)
