--- a/.github/actions/npm/steps/create-package/action.yml
+++ b/.github/actions/npm/steps/create-package/action.yml
@@ -64,4 +64,4 @@ runs:
 
         # Show package contents for debugging
         echo "📋 Package contents:"
-        tar -tzf "$PACKAGE_FILE" | head -10
+        tar -tzf "$PACKAGE_FILE" 2>/dev/null | head -10 || true
