--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -179,7 +179,9 @@ jobs:
           MAX_INPUT="${{ inputs.max_node_major }}"
           DEFAULT_MAX=22
           
-          echo "🔍 DEBUG: Received min_node_version = '$MIN'"
+          echo "🔍 DEBUG (ci-jobs.yml): min_node_version = '$MIN'"
+          echo "🔍 DEBUG (ci-jobs.yml): max_node_major = '$MAX_INPUT'"
+          
           if [[ -n "$MAX_INPUT" ]]; then
             MAX=$MAX_INPUT
           else
