fix: Remove invalid github-token input from pull request action, use env variable instead

--- a/.github/actions/github/jobs/create-release-pr/action.yml
+++ b/.github/actions/github/jobs/create-release-pr/action.yml
@@ -97,4 +97,5 @@ runs:
         head-branch: ${{ github.ref_name }}
         body-content: ${{ steps.changelog.outputs.changelog-content }}
         labels: "release,${{ inputs.version-bump }}"
-        github-token: ${{ inputs.github-token }}
+      env:
+        GITHUB_TOKEN: ${{ inputs.github-token }}
