--- a/.github/actions/npm/jobs/publish-github-packages/action.yml
+++ b/.github/actions/npm/jobs/publish-github-packages/action.yml
@@ -55,7 +55,10 @@ runs:
       if: steps.publish-package.outputs.published == 'true'
       shell: bash
       run: |
-        echo "- ✅ GitHub Packages: Published ${{ inputs.package-name }}@${{ inputs.version }} successfully" >> $GITHUB_STEP_SUMMARY
+        # Extract org and package name for GitHub Packages URL
+        ORG_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f1)
+        PACKAGE_NAME=$(echo "${{ inputs.package-name }}" | sed 's|^@[^/]*/||')
+        echo "- ✅ GitHub Packages: Published [${{ inputs.package-name }}@${{ inputs.version }}](https://github.com/$ORG_NAME/$PACKAGE_NAME/pkgs/npm/$PACKAGE_NAME) successfully" >> $GITHUB_STEP_SUMMARY
 
     - name: Update Summary - GitHub Packages Failure
       if: steps.publish-package.outputs.published != 'true'
